// user.proto

syntax = "proto3";

package user;

// Define the User message
message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

// Define the GetUserRequest message
message GetUserRequest {
    string id = 1;
}

// Define the UserService service
service UserService {
    rpc GetUser (GetUserRequest) returns (User);
    rpc CreateUser (User) returns (User);
}
